fix z-index for map, make map directory ids read only

--- a/wp-content/themes/hub-rtp-child/resources/assets/styles/components/_map.scss
+++ b/wp-content/themes/hub-rtp-child/resources/assets/styles/components/_map.scss
@@ -4,7 +4,7 @@
 
   &__graphic {
     position: absolute;
-    z-index: -1;
+    z-index: 1;
   }
 
   &__legend {
@@ -16,6 +16,7 @@
     width: 100%;
     max-width: 375px;
     background-color: $color-white;
+    z-index: 5;
 
     @media #{$large-and-up} {
       display: block;
